--- a/home-page/public/style.css
+++ b/home-page/public/style.css
@@ -9,30 +9,23 @@ body {
     max-width: 100%;
     overflow-x: hidden;
 }
-h1 {
-    padding: 5px;
-    color: white;
-    font-size: 30px;
-}
 
-header > h3 {
+header > h3 {   /* align website name and write a review together */
     font-weight: normal;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: 80%;
     position: relative;
     color: white;
-    left: 77%;
-    float: 80%;
+    float: right;
     display: inline;
 }
-header > p {
 
-    font-family: Georgia, 'Times New Roman', Times, serif;
+.rmi {      /* align website name and write a review together */
     color: whitesmoke;
-    font-size: 150%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     display: inline;
+    float: left;
+    font-size: 150%;
 }
-
 mark.white {
     color:white;
     background: none;
@@ -45,18 +38,19 @@ mark.yellow {
 img {
     opacity: 0.80;
     max-width: 100%;
-
   }
-
-  
+ 
 .searchBar > p {
-    background: black;
-    color: white;
     font-size: 30px;
-    position: relative;
-    left: 33%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .searchBar > input {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     padding: 10px;
     font-size: 17px;
@@ -65,22 +59,68 @@ img {
     height: 5%;
     left: 35%;
 }
-.searchBar > button {
+.searchBar > button { /* need to get the button aligned with the search bar */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     padding: 10px;
     font-size: 17px;
-    left: 35%;
     width: 5%;
     height: 5%;
     cursor: pointer;
-    background: blue;
     color: white;
 
 }
-footer > li {
+
+.footer > li {
     display: inline-block;
     padding: 0 5px;
     font-size: 20px;
     text-align: center;
     float: left;
+    color: white;
+}
+
+  .flex-container {
+    display: flex;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+  }
+  .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
+  
+  .fa-instagram {
+    background: white;
+    color:black;
+    display: block;
+    border-radius: 50%;
+  }
+  
+  .fa-linkedin {
+    background: white;
+    color:black;
+    display: block;
+    border-radius: 50%;
+  }
+
+  .circle {
+    border: 1px solid black;
+    border-radius: 50%;
+    display: inline-block;
+}
+.circle.instagram {
+    border-radius: 50%;
+    display: block;
+}
+.circle.linkedin {
+    border-radius: 50%;
+    display: block;
 }
