--- a/home-page/public/style.css
+++ b/home-page/public/style.css
@@ -25,19 +25,23 @@ header > h3 {   /* align website name and write a review together */
     display: inline;
     float: left;
     font-size: 150%;
+    position: relative;
 }
 mark.white {
     color:white;
     background: none;
+    position: relative;
 }
 mark.yellow {
     color: yellow;
     background: none;
+    position: relative;
 }
 
 img {
     opacity: 0.80;
     max-width: 100%;
+    position: relative;
   }
  
 .searchBar > p {
@@ -46,6 +50,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 .searchBar > input {
     display: flex;
@@ -59,84 +64,44 @@ img {
     height: 5%;
     left: 35%;
 }
-.searchBar > button { /* need to get the button aligned with the search bar */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    padding: 10px;
-    font-size: 17px;
-    width: 5%;
-    height: 5%;
-    cursor: pointer;
-    color: white;
-
-}
-
-.footer > li {
-    display: inline-block;
-    padding: 0 5px;
-    font-size: 20px;
-    text-align: center;
-    float: left;
-    color: white;
-}
 
   .main-footer {
-    background: white;
+	bottom: 0;
+	padding-top: 10px;
+	width: 100%;
+	box-shadow: 0px 0px 25px rgb(207, 207, 207);
+	height: 120px;
+	color: #9B9B9B;
+	background: #F3F3F3;
+  }
+  .content {
+    display: block;
+	padding: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	font: 25px Georgia, "Times New Roman", Times, serif;
+	font-size: 14px;
+  }
+  a {
     color: black;
-    padding: 40px 5%;
-  }
-
-  .about-us {
-      color: white;
-      font-size: 12px;
-  }
-  .fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 30px;
-    text-align: center;
     text-decoration: none;
-    margin: 5px 2px;
-  }
+    font-size: 15px;
+}
   
-  .fa-instagram {
-    background: white;
-    color:black;
-    display: inline-block;
-    border-radius: 50%;
-  }
-  
-  .fa-linkedin {
-    background: white;
-    color:black;
-    display: inline-block;
-    border-radius: 50%;
-  }
-
-  .circle {
-    border: 1px solid black;
-    border-radius: 50%;
-    display: inline-block;
-}
-.circle.instagram {
-    border-radius: 50%;
-    display: block;
-}
-.circle.linkedin {
-    border-radius: 50%;
-    display: block;
-}
-.comp {     /* insert some picture on right and do styling to format it properly*/
+.comp {     
     background-color: white;
     white-space: pre-wrap;
+    position: relative;
 }
 .text{
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    margin-left:5em;
 }
 .black-comp {
     background-color: black;
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    position: relative;
 }
