--- a/Frontend/home-page/src/Header/Header.css
+++ b/Frontend/home-page/src/Header/Header.css
@@ -79,79 +79,82 @@
     display: none;
 }
 
-@media screen and (max-width: 960px) {
-    .NavbarItems {
-        position: relative;
-    }
+/*TODO: Everything below is a reminant of the hamburger button and the responsiveness of the header. Need to
+  remove or modify later on. */
 
-    .nav-menu {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 90vh;
-        position: absolute;
-        top: 80px;
-        left: -100%;
-        opacity: 1;
-        transition: all 0.5s ease;
-    }
+/*@media screen and (max-width: 960px) {*/
+/*    .NavbarItems {*/
+/*        position: relative;*/
+/*    }*/
 
-    .nav-menu.active {
-        background: #1c2237;
-        left: 0;
-        opacity: 1;
-        transition: all 0.6s ease;
-        z-index: 1;
-    }
+/*    .nav-menu {*/
+/*        display: flex;*/
+/*        flex-direction: column;*/
+/*        width: 100%;*/
+/*        height: 90vh;*/
+/*        position: absolute;*/
+/*        top: 80px;*/
+/*        left: -100%;*/
+/*        opacity: 1;*/
+/*        transition: all 0.5s ease;*/
+/*    }*/
 
-    .nav-links {
-        text-align: center;
-        padding: 2rem;
-        width: 100%;
-        display: table;
-    }
+/*    .nav-menu.active {*/
+/*        background: #1c2237;*/
+/*        left: 0;*/
+/*        opacity: 1;*/
+/*        transition: all 0.6s ease;*/
+/*        z-index: 1;*/
+/*    }*/
 
-    .nav-links:hover {
-        color: #f00946;
-        transform: scale(1.2);
-        transition: all 0.3s ease;
-    }
+/*    .nav-links {*/
+/*        text-align: center;*/
+/*        padding: 2rem;*/
+/*        width: 100%;*/
+/*        display: table;*/
+/*    }*/
 
-    .nav-item:hover {
-        border: none;
-    }
+/*    .nav-links:hover {*/
+/*        color: #f00946;*/
+/*        transform: scale(1.2);*/
+/*        transition: all 0.3s ease;*/
+/*    }*/
 
-    .nav-item {
-        width: 100%;
-    }
+/*    .nav-item:hover {*/
+/*        border: none;*/
+/*    }*/
 
-    .navbar-logo {
-        position: absolute;
-        top: 0;
-        left: 0;
-        /*transform: translate(25%, 50%);*/
-    }
+/*    .nav-item {*/
+/*        width: 100%;*/
+/*    }*/
 
-    .menu-icon {
-        display: block;
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform: translate(-100%, 60%);
-        font-size: 1.8rem;
-        cursor: pointer;
-    }
+/*    .navbar-logo {*/
+/*        position: absolute;*/
+/*        top: 0;*/
+/*        left: 0;*/
+/*        !*transform: translate(25%, 50%);*!*/
+/*    }*/
 
-    .fa-times {
-        color: #000000;
-        font-size: 2rem;
-    }
+/*    .menu-icon {*/
+/*        display: block;*/
+/*        position: absolute;*/
+/*        top: 0;*/
+/*        right: 0;*/
+/*        transform: translate(-100%, 60%);*/
+/*        font-size: 1.8rem;*/
+/*        cursor: pointer;*/
+/*    }*/
 
-    .nav-btn {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 120px;
-    }
-}
+/*    .fa-times {*/
+/*        color: #000000;*/
+/*        font-size: 2rem;*/
+/*    }*/
+
+/*    .nav-btn {*/
+/*        display: flex;*/
+/*        justify-content: center;*/
+/*        align-items: center;*/
+/*        width: 100%;*/
+/*        height: 120px;*/
+/*    }*/
+/*}*/
