--- a/Frontend/home-page/public/style.css
+++ b/Frontend/home-page/public/style.css
@@ -3,7 +3,7 @@
 }
 body {
     margin: 0;
-    background-color: black;
+    background-color: #000000;
     padding:0;
     max-width: 100%;
     overflow-x: hidden;
