--- a/Frontend/form-page/public/style.css
+++ b/Frontend/form-page/public/style.css
@@ -1,20 +1,58 @@
-.form-parameters label {
-    margin-left: 17em;
-    font-size: 25px;  
-    width: 240px;
-    display: inline-block; 
-    text-align: right;
+.form-box {
+    margin-left: 15em;
+    margin-right: 15em;
+    width: auto;
+    height: 1000px;
+    border: 3px solid #fbd9ad;
+    box-sizing: border-box;
 }
 
-.form-parameters input[type = "text"] {
-    background-color: lightsalmon;
+.form-parameters {
+    width: auto;
+    height: 90;
+    background-color: #fbd9ad;
+    border: 3px solid #fbd9ad;
+    box-sizing: border-box;
+}
+.form-header {
+    font-family: Noto Serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    letter-spacing: -0.05em;
+    text-align: center;
+}
+
+.form-parameters label {
+    margin-left: 5em;
+    font-size: 25px;  
+    width: 300px;
+    font-family: Oxygen;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 110%;
+    display: inline-block; 
+}
+
+.input-text {
+    background-color: #fbd9ad;
     color: black;
     box-sizing: border-box;
     padding: 6px 6px;
     margin: 5px 0;
     border: 1px solid #ccc;
-    border-radius: 20px;
+    border-radius: 10px;
     box-sizing: border-box;
+}
+.start-month {
+
+    display: inline-block;
+    padding-right: 7.7em;
+}
+
+.start-year {
+
+    display: inline-block;
 }
 .form-parameters input[type = "radio"] {
     background-color: lightsalmon;
@@ -24,16 +62,25 @@
     display: inline-block; 
 }
 .radio-label {
-    width: 100px;
+  
     display: inline-block; 
 }
 
+.review-text {
+
+    background-color: #fbd9ad;
+    color: black;
+    box-sizing: border-box;
+    width: 600px;
+    height: 300px;
+    /* padding: 150px; */
+    margin-left: 6em;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
 input {
     font-size: 1.5em;
     color: black;
 }
-.bg {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-}
+
