--- a/Frontend/home-page/public/style.css
+++ b/Frontend/home-page/public/style.css
@@ -37,8 +37,8 @@ mark.black {
     position: relative;
 }
 
-img {
-    opacity: 0.80;
+.home-image {
+   
     max-width: 100%;
     position: relative;
   }
@@ -153,8 +153,8 @@ img {
     position: absolute;
     width: 600px;
     height: 413.27px;
-    left: 83px;
-    top: 872px;
+    left: 60px;
+    top: 1160px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border: 3px solid #FFA07A;
 
@@ -164,8 +164,8 @@ img {
     position: absolute;
 width: 591px;
 height: 48px;
-left: 770px;
-top: 930px;
+left: 850px;
+top: 1230px;
 
 font-family: Noto Serif;
 font-style: normal;
@@ -180,8 +180,8 @@ color: #000000;
     position: absolute;
 width: 568px;
 height: 140px;
-left: 745px;
-top: 1050px;
+left: 820px;
+top: 1390px;
 
 font-family: Oxygen;
 font-style: normal;
@@ -198,8 +198,8 @@ color: #000000;
     position: absolute;
 width: 292px;
 height: 0px;
-left: 884px;
-top: 1000px;
+left: 960px;
+top: 1320px;
 
 border: 2px solid #F4976C;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
