--- a/Frontend/public/style.css
+++ b/Frontend/public/style.css
@@ -3,7 +3,6 @@
 }
 body {
     margin: 0;
-    background-color: #000000;
     padding:0;
     max-width: 100%;
     overflow-x: hidden;
@@ -38,29 +37,45 @@ mark.black {
 }
 
 img {
-    opacity: 0.80;
     max-width: 100%;
     position: relative;
   }
 
 .searchBar > p {
-    font-size: 30px;
-    color: white;
+    font-family: Noto serif;
+    font-size: 40px;
+    color: black;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    top: -560px;
+    font-weight: bold;
+    line-height: 54px;
+    text-transform: capitalize;
 }
+
 .searchBar > input {
     border: 3px solid #FFA07A;
-    border-radius: 25px;
+    border-radius: 20px;
     background-color :#fbe7a6;
-    margin: auto;
-    display: block;
+    margin: auto; 
+    display: block; 
     padding: 10px;
     font-size: 17px;
-    width: 700px;
-    height: 48px;
+    width: 760px;
+    height: 52px;
+    top: -550px;
+    align-items: center;
+    position: relative;
+}
+.search-icon {
+    font-size: 24px;
+    color: #042A2B;
+    align-items: center;
+    position: relative;
+    top: -590px;
+    left: 1060px;
 }
 ::placeholder  {
     font-family: Noto Serif;
@@ -138,23 +153,15 @@ img {
 }
 
 .comp {
-    height: 600px;
-    background: whitesmoke;
-
-}
-.text{
-    font-family: Oxygen;
-    font-size: 30px;
-    margin-left:5em;
-    display: inline-block;
+    height: 500px;
+    background: white;
 }
 
 .design {
     position: absolute;
     width: 600px;
-    height: 413.27px;
     left: 83px;
-    top: 872px;
+    top: 1000px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border: 3px solid #FFA07A;
 
@@ -162,48 +169,48 @@ img {
 
 .design-header {
     position: absolute;
-width: 591px;
-height: 48px;
-left: 770px;
-top: 930px;
+    width: 591px;
+    height: 48px;
+    left: 770px;
+    top: 1050px;
 
-font-family: Noto Serif;
-font-style: normal;
-font-weight: bold;
-font-size: 35px;
-line-height: 48px;
-/* identical to box height */
-color: #000000;
-}
+    font-family: Noto Serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 35px;
+    line-height: 48px;
+    /* identical to box height */
+    color: #000000;
+    }
 
 .design-para {
     position: absolute;
-width: 568px;
-height: 140px;
-left: 745px;
-top: 1050px;
+    width: 568px;
+    height: 140px;
+    left: 745px;
+    top: 1200px;
 
-font-family: Oxygen;
-font-style: normal;
-font-weight: normal;
-font-size: 28px;
-line-height: 35px;
-text-align: center;
-display: inline-block;
+    font-family: Oxygen;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 35px;
+    text-align: center;
+    display: inline-block;
 
-color: #000000;
+    color: #000000;
 }
 
 .horizontal-line {
     position: absolute;
-width: 292px;
-height: 0px;
-left: 884px;
-top: 1000px;
+    width: 292px;
+    height: 0px;
+    left: 884px;
+    top: 1135px;
 
-border: 2px solid #F4976C;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-transform: rotate(-0.2deg);
+    border: 2px solid #F4976C;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transform: rotate(-0.2deg);
 }
 
 
