--- a/Frontend/src/components/Button/Button.css
+++ b/Frontend/src/components/Button/Button.css
@@ -19,7 +19,6 @@
 
 .btn--outline {
     background-color: transparent;
-    color: #fff;
     padding: 8px 20px;
     border: 1px solid var(--primary);
     transition: all 0.3s ease-out;
@@ -73,6 +72,7 @@
     padding: 8px 16px;
     height: 100%;
     width: 100%;
+    max-width:
 }
 
 .blue {
@@ -89,8 +89,9 @@
 
 .primary {
     background-color: #fbe7a6;
-    color: #000000;
     border-color: #F4976C;
+    /*font-weight: bold;*/
+    color: #757577;
 }
 
 .primary:hover {
