form mobile done but confirmation overlay be the end of me

--- a/Frontend/src/pages/Form/Form.css
+++ b/Frontend/src/pages/Form/Form.css
@@ -20,12 +20,8 @@ hr {
     width: 100%;
 }
 
-
-/* add internship search thingy under line divider*/
-
 .form-parameters {
     width: auto;
-    height: em;
     box-sizing: border-box;
 }
 
@@ -62,25 +58,82 @@ hr {
     display: inline-block;
     border: .1em solid lightsalmon;
     margin-left: 2em;
+    margin-right: 10%;
 }
 
 .start-year {
     display: inline-block;
     border: .1em solid lightsalmon;
-    margin-left: 2em;
-}
-
-.form-parameters input[type = "radio"] {
-    background-color: lightsalmon;
-    color: black;
-    width: 85%;
-    display: block;
-    border: 1px solid lightsalmon;
 }
 
 .radio-label {
-    display: inline-block;
+    margin-left: 2em;
 }
+
+.radio-inline {
+    display: inline-block;
+    margin-right: 12%;
+}
+
+.review-text {
+    background-color: whitesmoke;
+    color: black;
+    box-sizing: border-box;
+    width: 85%;
+    height: 20%;
+    margin-left: 2em;
+    border: 1.5px solid lightsalmon;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #fbe8a6;
+    border-color: #ffa07a;
+    border-radius: 10px;
+}
+
+.button-submit {
+    text-align: center;
+}
+
+/* Confirmation Overlay */
+.overlay {
+    position: fixed;
+    width: 100%;
+    top: 20%;
+    left: 10%;
+    width: 80%;
+    height: 40%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    opacity: .8;
+    flex-wrap: wrap;
+  }
+
+  .popup {
+      max-width: 80%;
+      background: #fbe8a6;
+      border: 1.5px solid #ffa07a;
+      font-size: 1.3em;
+      border-radius: 10px;
+  }
+
+  .popup h1, p {
+      text-align: center;
+      font-family: Noto Serif;
+  }
+
+  .exit-overlay {
+      text-align: center;
+  }
+
+  .btn-cancel {
+      background: whitesmoke;
+      margin-bottom: .2em;
+  }
+
+
 
 
 
