--- a/Frontend/src/components/Button/Button.css
+++ b/Frontend/src/components/Button/Button.css
@@ -40,7 +40,7 @@
     width: 80%;
     text-decoration: none;
     font-size: 24px;
-    backdrop-color: transparant;
+    backdrop-color: transparent;
     color: #fff;
     padding: 14px 20px;
     border: 1px solid #fff;
@@ -72,7 +72,6 @@
     padding: 8px 16px;
     height: 100%;
     width: 100%;
-    max-width:
 }
 
 .blue {
