--- a/Frontend/src/pages/Home/Home.css
+++ b/Frontend/src/pages/Home/Home.css
@@ -20,8 +20,8 @@ body {
     width: 10em;
 }
 
-/* BUTTON HAS DISAPPEARED WTFFFFFFFFFFF
-/* .btn--link {
+/* BUTTON HAS DISAPPEARED WTFFFFFFFFFFF */
+.btn--link {
     text-align: center;
     border-radius: 10px;
     width: 80%;
@@ -31,7 +31,7 @@ body {
     padding: 14px 20px;
     border: 1px solid #ffa07a;
     transition: all 0.3s ease-out;
-}  */
+} 
 
 img {
     max-width: 100%;
@@ -55,6 +55,7 @@ img {
     position: relative;
     font-size: 1em;
     font-family: Noto Serif;
+    font-weight: bold;
     text-align: center;
     top: -15em;
 }
@@ -120,22 +121,7 @@ hr {
 
 /* Media Queries */
 /* LAPTOPS */
-/* @media (min-width: 768px) {
-    html {
-        height: 100%;
-      }
-
-    * {
-        box-sizing: border-box;
-    }
-
-    body {
-        margin: 0;
-        padding:0;
-        width: 100%;
-        overflow-x: hidden;
-    }
-    
+@media (min-width: 768px) {
      header > h3 {
         font-weight: normal;
         font-family: Noto Serif Bold;
@@ -143,130 +129,33 @@ hr {
         color: white;
         float: right;
         display: inline; 
-      }
-    
-    img {
-        max-width: 100%;
-        position: relative;
     }
 
-    .searchBar {
-        background-color: transparent;
-        top: -30em;
-        position: relative;
-
-    }
-        
-    .searchBar > p {
-        font-family: Noto serif;
-        font-size: 3em;
-        color: black;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        // top: -10em; 
-        font-weight: bold;
-        text-transform: capitalize;
+    .slogan h1 {
+        font-size: 2em;
+        top: -12em;
     }
     
+    .slogan p {
+        display: none;
+    }
+
     .searchBar-input {
-        border: .2em solid #FFA07A;
-        border-radius: 20px;
-        background-color :whitesmoke;
-        margin: auto; 
-        display: flex; 
-        padding: .5em;
-        font-size: 1em;
-        width: 67%;
-        height: 2.5em;
-        align-items: center;
-        position: relative;
+        top: -24em;
     }
-    
-    .searchBar-input:focus {
-        border-radius: 1px;
-        outline: none;
-    }
-    
+
     .search-icon {
-        font-size: 1.8em;
-        align-items: center;
-        display: flex;
-        //position: relative;
-        top: -17.9em;
-        left: 80%;
+        top: -25.5em;
+        margin-left: 81.5%;
     }
 
-    ::placeholder  {
-        font-family: Noto Serif;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 1.5em;
-    }
-    
-    .main-footer {
-        bottom: 0;
-        padding-top: 10px;
-        width: 100%;
-        box-shadow: 0px 0px 25px rgb(207, 207, 207);
-        height: 12em;
-        color: black;
-        background: #fbd9ad;
-        display: block;
-        padding: 10px;    
-    }
-    
-    .left-footer {
-        margin-left: 5em;
-        float: left;
-        font-family: Oxygen;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 1em;
-    
+    ::placeholder {
+        font-size: 1.3em;
     }
 
-    .left-footer-rmi {
-        font-style: normal;
-        font-weight: bold;
-        font-family: Noto Serif;
-        font-size: 2em;
-        line-height: 2em;
-        letter-spacing: -0.05em;
-        color:#000000;
-    }
     
-    .right-footer {
-        float: right;
-        margin-right: 5em;
-        font-family: Oxygen;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 1em;
-    }
 
-    .right-footer-header {
-        font-style: normal;
-        font-weight: bold;
-        font-family: Noto Serif;
-        font-size: 2em;
-    } */
-    
-    /* socials aren't floating right?? 
-    .linkedin {
-        margin-right: 18.5em;
-        float:right;
-        letter-spacing:normal;
-    }
-    
-    .insta {
-        margin-right: 1em;
-        float: right;
-        letter-spacing:normal;
-    }
-    /* ------------------------------------------------- 
-
+    /* 
     a {
         color: black;
         text-decoration: none;
@@ -290,7 +179,6 @@ hr {
     }
     
     .design-header {
-        //top: 1050px;
         position: absolute;
         width: 15em;
         height: 5em;
@@ -300,12 +188,10 @@ hr {
         font-style: normal;
         font-weight: bold;
         font-size: 2em;
-        //identical to box height
         color: #000000;
     }
     
     .design-para {
-        //top: 1200px;
         position: absolute;
         width: 15em;
         height: 3em;
@@ -321,7 +207,6 @@ hr {
     }
     
     .horizontal-line {
-        //top: 1135px;
         position: absolute;
         width: 20em;
         height: 0;
@@ -330,7 +215,7 @@ hr {
         border: 2px solid #F4976C;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         transform: rotate(-0.2deg);
-    }
+    } */
 }
 
 /*
